force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__RenewalProductOptionSubscriptionPricing__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RenewalProductOptionSubscriptionPricing__c</fullName>
        <formula>TEXT(SBQQ__ProductOption__r.SBQQ__RenewalProductOption__r.SBQQ__OptionalSKU__r.SBQQ__SubscriptionPricing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Product Option Sub Pricing</label>
        <type>Text</type>
    </CustomField>