force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__RenewalQuantity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RenewalQuantity__c</fullName>
        <description>Quantity of this subscription product that will be renewed.</description>
        <inlineHelpText>Quantity of this subscription product that will be renewed.</inlineHelpText>
        <label>Renewal Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>