force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__RenewedDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RenewedDate__c</fullName>
        <description>Date this subscription was renewed as determined by date the renewal opportunity was contracted.</description>
        <inlineHelpText>Date this subscription was renewed. Blank means it has not been renewed.</inlineHelpText>
        <label>Renewed Date</label>
        <type>Date</type>
    </CustomField>