force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__RequiredById__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RequiredById__c</fullName>
        <description>What Id the field is required by.</description>
        <inlineHelpText>What Id the field is required by.</inlineHelpText>
        <label>Required By Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>