force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__RequiredByProduct__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RequiredByProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Product of this subscription.</description>
        <inlineHelpText>Parent Product of this subscription.</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Child Subscriptions</relationshipLabel>
        <relationshipName>ChildSubscriptions</relationshipName>
        <type>Lookup</type>
    </CustomField>