force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__RevisedSubscription__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RevisedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup the Revised Subscription for this field.</inlineHelpText>
        <label>Revised Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Revisions</relationshipName>
        <type>Lookup</type>
    </CustomField>