force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__RootId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RootId__c</fullName>
        <description>The ID of the subscription or asset at the root of the bundle that contains this subscription</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the subscription or asset at the root of the bundle that contains this subscription</inlineHelpText>
        <label>Root Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>