force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__SegmentKey__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>