force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__SegmentLabel__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SegmentLabel__c</fullName>
        <description>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</description>
        <inlineHelpText>For multi-segmented Products, this is the Column header label (e.g. &quot;Year 1&quot;) associated with this line.</inlineHelpText>
        <label>Segment Label</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>