force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__SegmentQuantity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SegmentQuantity__c</fullName>
        <description>For MDQ Products, the quantity corresponding to the segment&apos;s original Quote Line</description>
        <inlineHelpText>For MDQ Products, the quantity corresponding to the segment&apos;s original Quote Line</inlineHelpText>
        <label>Segment Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>