force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__SegmentUplift__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SegmentUplift__c</fullName>
        <description>For MDQ products, the Uplift from the original segment&apos;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Uplift from the original segment&apos;s Quote Line.</inlineHelpText>
        <label>Segment Uplift</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>