force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__StartDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>The first date this subscription is in effect.</description>
        <formula>if ( ISBLANK (SBQQ__SubscriptionStartDate__c), SBQQ__Contract__r.StartDate, SBQQ__SubscriptionStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The first date this subscription is in effect.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </CustomField>