force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__SubscriptionEndDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscriptionEndDate__c</fullName>
        <description>Matches the quote line end date by default. If blank, it will match the contract end date.</description>
        <inlineHelpText>Matches the quote line end date by default. If blank, it will match the contract end date.</inlineHelpText>
        <label>Subscription End Date</label>
        <type>Date</type>
    </CustomField>