force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__SubscriptionStartDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscriptionStartDate__c</fullName>
        <description>Matches the quote line start date by default. If blank, it will match the contract start date.</description>
        <inlineHelpText>Matches the quote line start date by default. If blank, it will match the contract start date.</inlineHelpText>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </CustomField>