force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__TerminatedDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TerminatedDate__c</fullName>
        <description>Date on which this subscription terminated.</description>
        <inlineHelpText>Date the subscription terminated. Automatically populated when covered asset is upgraded.</inlineHelpText>
        <label>Terminated Date</label>
        <type>Date</type>
    </CustomField>