force-app/main/default/objects/SBQQ__Subscription__c/fields/Ship_From_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_From_Code__c</fullName>
    <description>RUBX-79 Ship From Code</description>
    <label>Ship From Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ship_From_Address</valueSetName>
    </valueSet>
</CustomField>