force-app/main/default/objects/SBQQ__Subscription__c/fields/Subscription_Migration_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Migration_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Subscription Migration External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>