force-app/main/default/objects/SBQQ__Subscription__c/fields/Terminated_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Terminated_Subscription__c</fullName>
    <formula>IF(NOT(ISBLANK(SBQQ__TerminatedDate__c )), TRUE, 
IF(NOT(ISBLANK(SBQQ__RevisedSubscription__r.SBQQ__TerminatedDate__c)), TRUE,
NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terminated Subscription?</label>
    <type>Checkbox</type>
</CustomField>