force-app/main/default/objects/SBQQ__Subscription__c/fields/Third_Party_Vendor_Description__c.field-meta.xml
<CustomField>
        <fullName>Third_Party_Vendor_Description__c</fullName>
        <label>Third Party Vendor Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </CustomField>