force-app/main/default/objects/SBQQ__Subscription__c/fields/Transactional__c.field-meta.xml
<CustomField>
    <fullName>Transactional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RUBX-79 ndicates whether a product is transactional or not.</description>
    <label>Transactional</label>
    <type>Checkbox</type>
</CustomField>