force-app/main/default/objects/SBQQ__Subscription__c/fields/Uplift_Factor__c.field-meta.xml
<CustomField>
        <fullName>Uplift_Factor__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The factor that the Subscription gets increased by from the associated CPI Uplift record. This is populated in the background by code.</description>
        <inlineHelpText>The factor that the Subscription gets increased by from the associated CPI Uplift record. This is populated in the background by code.</inlineHelpText>
        <label>CPI Uplift Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>