force-app/main/default/objects/SBQQ__Subscription__c/fields/X3rd_Party_Product__c.field-meta.xml
<CustomField>
        <fullName>X3rd_Party_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies 3rd Party Products</description>
        <inlineHelpText>Identifies 3rd Party Products</inlineHelpText>
        <label>3rd Party Product</label>
        <type>Checkbox</type>
    </CustomField>